fixed text-box alignment

--- a/style.css
+++ b/style.css
@@ -188,22 +188,16 @@ hr {
   border: none;
 }
 
-/* .input-btn:focus {
-  border: 1px solid #828282;
-} */
-
 .list {
   align-self: flex-start;
   margin-left: 0;
-  /* border: 1px solid red; */
 }
-/* s */
+
 .checkbox-form div {
   display: block;
 }
-.large-div {
-  /* border: 1px solid red; */
 
+.large-div {
   width: 32.625rem;
   max-width: 522px;
   display: flex;
@@ -213,12 +207,7 @@ hr {
 }
 .checkbox-form div {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 22px;
-  /* border: 1px solid red; */
   margin-bottom: 30px;
-  text-align: center;
 }
 .checkbox-form label {
   font-family: 'Montserrat';
@@ -226,7 +215,8 @@ hr {
   font-weight: 500;
   font-size: 1.125rem;
   line-height: 1.375rem;
-  /* text-decoration: line-through; */
+
+  margin-right: 10px;
 }
 form input[type='checkbox'] {
   width: 1.5rem;
@@ -235,3 +225,30 @@ form input[type='checkbox'] {
   border-radius: 4px;
   margin-right: 0.5rem;
 }
+
+.check-div {
+  display: flex;
+  margin-bottom: 30px;
+}
+.check-label {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.125rem;
+  line-height: 1.375rem;
+  align-items: flex-start;
+  justify-content: flex-start;
+  /* text-align: center; */
+}
+
+.check-checkbox {
+  width: 1.5rem;
+  height: 1.5rem;
+  border: 1px solid #828282;
+  border-radius: 4px;
+  margin-right: 0.5rem;
+
+  display: flex;
+  align-items: baseline;
+}
+/* EXTRA CLASSES ON JAVASCRIPT */
